# homework_29

./: README.md  docker-compose.yaml  pyproject.toml
ads/: urls.py
ads/migrations/: 0001_initial.py  0002_initial.py
ads/models/: ad.py
ads/views/: ad.py
data/: csv_to_json.py
homework_29/: asgi.py  settings.py  urls.py  wsgi.py
pg_data/: postmaster.pid
pg_data/base/13455/: 1247  1249  1259  16384  16386  16391  16392  16394  16396  16399  16401  16403  16405  16408  16410  16415  16419  16424  16426  16428  16431  16433  16435  16440  16442  16447  16449  16456  16457  16458  16470  16472  16485  16486  16487  16499  16500  16501  16509  16522  (+46 more)
pg_data/global/: pg_control  pg_internal.init
pg_data/pg_stat_tmp/: db_0.stat  db_13455.stat  global.stat
users/: models.py  urls.py
users/migrations/: 0001_initial.py
